// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Character List Component should match snapshot for empty character list 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="max-w-5xl mx-auto px-4 py-8"
  >
    <div
      class="flex flex-col items-center justify-center min-h-[60vh] text-center"
    >
      <h1
        class="text-2xl font-display font-semibold mb-2"
      >
        No Characters
      </h1>
      <p
        class="text-[var(--color-text-secondary)] mb-6"
      >
        Get started by adding your first character
      </p>
      <a
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-10 rounded-sm px-8"
        href="api/characters/add"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Add Character
      </a>
    </div>
  </div>
</div>
`;

exports[`Character List Component should match snapshot for list with mixed characters 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="max-w-5xl mx-auto px-4 py-8"
  >
    <div
      class="mb-6"
    >
      <h1
        class="text-2xl font-display font-semibold mb-3"
      >
        Characters
      </h1>
      <a
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-9 px-4 py-2"
        href="api/characters/add"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Add Character
      </a>
    </div>
    <div
      class="relative w-full rounded-lg border px-4 py-3 text-sm [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg~*]:pl-7 text-destructive dark:border-destructive [&>svg]:text-destructive mb-3 border-[var(--color-danger-rose)]/30 bg-[var(--color-danger-rose)]/10"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <div
        class="text-sm [&_p]:leading-relaxed flex items-center justify-between w-full"
      >
        <span>
          ESI authorization for 
          <strong>
            Revoked Pilot
          </strong>
           has been revoked. Re-authorize to resume syncing.
        </span>
        <a
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border bg-transparent shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-8 rounded-sm px-3 text-xs text-[var(--color-danger-rose)] border-[var(--color-danger-rose)]/30 ml-4"
          href="/api/characters/add"
        >
          Re-authorize
        </a>
      </div>
    </div>
    <div
      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"
    >
      <div
        data-testid="character-item-12345"
      >
        Test Pilot
      </div>
      <div
        data-testid="character-item-22222"
      >
        Revoked Pilot
      </div>
    </div>
  </div>
</div>
`;

exports[`Character List Component should match snapshot for list with normal characters 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="max-w-5xl mx-auto px-4 py-8"
  >
    <div
      class="mb-6"
    >
      <h1
        class="text-2xl font-display font-semibold mb-3"
      >
        Characters
      </h1>
      <a
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-9 px-4 py-2"
        href="api/characters/add"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Add Character
      </a>
    </div>
    <div
      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"
    >
      <div
        data-testid="character-item-12345"
      >
        Test Pilot
      </div>
    </div>
  </div>
</div>
`;

exports[`Character List Component should match snapshot for list with reauth character 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="max-w-5xl mx-auto px-4 py-8"
  >
    <div
      class="mb-6"
    >
      <h1
        class="text-2xl font-display font-semibold mb-3"
      >
        Characters
      </h1>
      <a
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-9 px-4 py-2"
        href="api/characters/add"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Add Character
      </a>
    </div>
    <div
      class="relative w-full rounded-lg border px-4 py-3 text-sm [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg~*]:pl-7 text-destructive dark:border-destructive [&>svg]:text-destructive mb-3 border-[var(--color-danger-rose)]/30 bg-[var(--color-danger-rose)]/10"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <div
        class="text-sm [&_p]:leading-relaxed flex items-center justify-between w-full"
      >
        <span>
          ESI authorization for 
          <strong>
            Revoked Pilot
          </strong>
           has been revoked. Re-authorize to resume syncing.
        </span>
        <a
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border bg-transparent shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-8 rounded-sm px-3 text-xs text-[var(--color-danger-rose)] border-[var(--color-danger-rose)]/30 ml-4"
          href="/api/characters/add"
        >
          Re-authorize
        </a>
      </div>
    </div>
    <div
      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"
    >
      <div
        data-testid="character-item-22222"
      >
        Revoked Pilot
      </div>
    </div>
  </div>
</div>
`;
